[package]
name = "pacpreview"
version = "0.5.0"
authors = ["Stephen E. Baker <baker.stephen.e@gmail.com>"]
edition = "2024"

description = "Unified info output for pacman packages"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/TheCycoONE/pacpreview"
keywords = ["pacman","archlinux"]
categories = ["command-line-utilities"]

[dependencies]
alpm = { version = "5.0.0" }
pacmanconf = "3.1.0"
termcolor = "1.4.1"
textwrap = { version = "~0.16.0", features = ["terminal_size"] }

[features]
git = ["alpm/git"]

